moment()corrected, localStorage added, css theme

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,133 +31,21 @@
     <div class="time-block">
       
       <!-- TimeBlocks go here -->
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
 
-      <div class="row" id="hour-9">
+      <!-- <div class="row" id="hour-9">
         <div class="col-md-3 border">
           <h2 id="time-9"></h2>
         </div>
         <div class="col-md-8 border">
-          <form id=""></form>
+            <input type="text">
         </div>
         <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
+          <button id= "saveBtn" class="saveBtn">Save</button>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
+      
 
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-
-      <div class="row" id="hour-9">
-        <div class="col-md-3 border">
-          <h2 id="time-9"></h2>
-        </div>
-        <div class="col-md-8 border">
-          <form></form>
-        </div>
-        <div class="col-md-1 bg-dark p-2">
-          <button class="p-2 border">Save</button>
-        </div>
-      </div>
-      <!-- <div id="hour-10"></div>
-      <div id="hour-11"></div>
-      <div id="hour-12"></div>
-      <div id="hour-1"></div>
-      <div id="hour-2"></div>
-      <div id="hour-3"></div>
-      <div id="hour-4"></div>
-      <div id="hour-5"></div> -->
 
     </div>
 
